# BoW_WxBS

./: .gitignore  .gitmodules  .~lock.index_1ters.txt#  .~lock.voc.txt#  BoW.cpp  BoW.hpp  BoW_WxBS.cpp  BoW_WxBS.hpp  BoWbackup.cpp  CMakeLists.txt  README.md  WxBSdet_desc.cpp  build.sh  config_iter_mods_cviu_wxbs.ini  config_iter_mods_cviu_wxbs2.ini  iindex.hpp  iters_mods_cviu_wxbs_2.ini  iters_mods_cviu_wxbs_3.ini  main.cpp
index/: .~lock.index_1iters_120_test.txt#  .~lock.index_2iters_120image_WxBS.txt#  index_1iters_56image_WxBS.txt  index_1iters_test.txt  index_1ters.txt
reuslt/: 4iters_120image.txt
src/: BoW_WxBS (copy).cpp  BoW_WxBS (copy).hpp  BoW_WxBS _backup2.cpp  BoW_WxBS.cpp  BoW_WxBS.hpp  BoW_WxBS_backup.cpp  BoW_WxBS_backup_2.hpp  WxBSdet_desc.cpp  iindex.hpp  main (copy).cpp  main.cpp  main_backup.cpp  tempCodeRunnerFile.cpp
vocabulary/: voc_1iters_test.txt
